--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#
+# Copyright (c) 2022. This source code is owned to Cuauhtemoc Magana.
+#
+# The code is under the Apache Open Source without limits or restrictions to use.
+#
+
 
