Defined Structure to TDD.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 #
 # The code is under the Apache Open Source without limits or restrictions to use.
 #
-
+logging.level.org.springframework.context=INFO
 
