--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,15 @@
 #
 # The code is under the Apache Open Source without limits or restrictions to use.
 #
+spring.datasource.url=jdbc:h2:mem:customerdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-ui
+
 logging.level.org.springframework.context=INFO
 
